--- a/public/global.css
+++ b/public/global.css
@@ -7,8 +7,13 @@ figure {
   margin: 20px auto;
 }
 
+figure img {
+  max-width: 550px;
+  margin: 10px auto;
+}
+
 figcaption {
   color: #999;
-  font-size: 80%;
+  font-size: 90%;
   text-align: center;
 }
