--- a/docs/assets/css/colors.css
+++ b/docs/assets/css/colors.css
@@ -1,3 +1,9 @@
+.md-announce a,
+.md-announce a:focus,
+.md-announce a:hover {
+  color: currentColor;
+}
+
 .md-typeset code[data-color="category-udon"] {
   background-color: #7e56c2;
 }
